No longer use top for spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,8 @@
 body {
   background-color: #1c1d22;
   overflow-x: hidden;
-  margin: 0
+  margin: 0;
+  display: block;
 }
 
 .profile-assets {
@@ -28,13 +29,18 @@ body {
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  top: 60vh;
-  position: sticky;
+  position: absolute;
 }
 
 .profile-assets img {
   height: inherit;
   width: inherit;
+}
+
+#computer-spacer {
+  width: 100vw;
+  height: 150vh;
+  position: static;
 }
 
 #computer {
@@ -45,6 +51,13 @@ body {
   transition: transform 200ms ease-out;
 }
 
+#computer-container {
+  width: 100vw;
+  height: 25vh;
+  top: 60vh;
+  position: sticky;
+}
+
 #card-container {
   width: 40vw;
   display: flex;
@@ -53,7 +66,6 @@ body {
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  top: 100vh;
   position: relative;
   font-family: Gotham;
   gap: 50px;
@@ -71,4 +83,16 @@ body {
   height: 400px;
   border-radius: 5px;
   border: 1px white solid;
+}
+
+@media (max-width: 767px) {
+  #card-container {
+    width: 90vw;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  #card-container {
+    width: 60vw;
+  }
 }
