--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -5,7 +5,7 @@
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    position: absolute;
+    position: relative;
     overflow: hidden;
 }
 
